--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -93,6 +93,7 @@
         &:not(.left)
           position relative
           margin -17px 0 0 0
+          float left
 
   article
     position static
